--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client-app",
+  "name": "nextjs-101",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
     "@nextui-org/react": "^2.2.10",
     "next": "14.1.2",
     "react": "^18",
