--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@nextui-org/react": "^2.2.10",
+    "axios": "^1.6.7",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18"
